fix(auth): 修复AuthService测试并完善Mock数据
- 修复testLoginSuccess NPE问题：正确Mock SecurityUser对象
- 修复testRefreshTokenSuccess用户不存在问题：正确Mock userId
- 完善AuthServiceTest的Mock配置
- 确保所有25个测试通过